--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -38,9 +38,11 @@
   <ItemGroup>
      <Compile Include="Assets\code\HandsRotationLocked.cs" />
      <Compile Include="Assets\code\PlayerView.cs" />
+     <Compile Include="Assets\code\OnScreenTex.cs" />
      <Compile Include="Assets\Idle MoCap\DemoScene\idle_mocap_follow_player.cs" />
      <Compile Include="Assets\code\AiMove.cs" />
      <Compile Include="Assets\code\PlayerControl.cs" />
+     <Compile Include="Assets\code\PlayerCast.cs" />
      <None Include="Assets\Idle MoCap\Idle Package Description.txt" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/2020.3.0f1c1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -618,11 +620,17 @@
     <Reference Include="Unity.VisualStudio.Editor">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Timeline.Editor">
+        <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Timeline">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.HighDefinition.Config.Runtime">
+        <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Config.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
@@ -638,12 +646,6 @@
     </Reference>
     <Reference Include="UnityEngine.UI">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline.Editor">
-        <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.HighDefinition.Config.Runtime">
-        <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Config.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
         <HintPath>D:/UnityProject/trial/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
